Fixed few alignment issues

--- a/sony/css/modules/_draggable.scss
+++ b/sony/css/modules/_draggable.scss
@@ -22,16 +22,16 @@
 		margin-top:40px;
 	}
 	.drag--camera { height:120px; margin-top:-20px; }
-	.drag--screen { height:90px; }
+	.drag--screen { height:140px; }
 	.drag--processor { height:70px; }
 	.drag--memory { height:50px; }
 	.drag--battery { height:30px; }
 	.drag--android { height:30px; }
 	.drag--connectivity { height:90px; }
 	.drag--features { height:120px; }
-	.drag--weight { height:30px; }
+	.drag--weight { height:20px; }
 	.drag--dimensions { height:30px; }
-	.drag--network { height:30px; }
+	.drag--network { height:20px; }
 }
 
 .drag-active {
